language/move-lang/tests/move_check/locals/assign_partial_resource.exp
error: 

   ┌── tests/move_check/locals/assign_partial_resource.move:6:21 ───
   │
 6 │         if (cond) { r = R{}; };
   │                     ^ Unused assignment or binding for local 'r'. Consider removing or replacing it with '_'
   │

error: 

   ┌── tests/move_check/locals/assign_partial_resource.move:6:21 ───
   │
 7 │         r = R{};
   │         ^ Invalid assignment to local 'r'
   ·
 6 │         if (cond) { r = R{}; };
   │                     - The local might contain a resource value due to this assignment. The resource must be used before you assign to this local again
   │

error: 

    ┌── tests/move_check/locals/assign_partial_resource.move:13:29 ───
    │
 13 │         if (cond) {} else { r = R{}; };
    │                             ^ Unused assignment or binding for local 'r'. Consider removing or replacing it with '_'
    │

error: 

    ┌── tests/move_check/locals/assign_partial_resource.move:13:29 ───
    │
 14 │         r = R{};
    │         ^ Invalid assignment to local 'r'
    ·
 13 │         if (cond) {} else { r = R{}; };
    │                             - The local might contain a resource value due to this assignment. The resource must be used before you assign to this local again
    │

error: 

    ┌── tests/move_check/locals/assign_partial_resource.move:20:24 ───
    │
 20 │         while (cond) { r = R{} };
    │                        ^ Unused assignment or binding for local 'r'. Consider removing or replacing it with '_'
    │

error: 

    ┌── tests/move_check/locals/assign_partial_resource.move:20:24 ───
    │
 20 │         while (cond) { r = R{} };
    │                        ^ Invalid assignment to local 'r'
    ·
 20 │         while (cond) { r = R{} };
    │                        - The local might contain a resource value due to this assignment. The resource must be used before you assign to this local again
    │

error: 

    ┌── tests/move_check/locals/assign_partial_resource.move:20:24 ───
    │
 21 │         r = R{};
    │         ^ Invalid assignment to local 'r'
    ·
 20 │         while (cond) { r = R{} };
    │                        - The local might contain a resource value due to this assignment. The resource must be used before you assign to this local again
    │

error: 

    ┌── tests/move_check/locals/assign_partial_resource.move:27:16 ───
    │
 27 │         loop { r = R{} }
    │                ^ Unused assignment or binding for local 'r'. Consider removing or replacing it with '_'
    │

error: 

    ┌── tests/move_check/locals/assign_partial_resource.move:27:16 ───
    │
 27 │         loop { r = R{} }
    │                ^ Invalid assignment to local 'r'
    ·
 27 │         loop { r = R{} }
    │                - The local might contain a resource value due to this assignment. The resource must be used before you assign to this local again
    │

error: 

    ┌── tests/move_check/locals/assign_partial_resource.move:30:27 ───
    │
 31 │         if (cond) { x = y };
    │                     ^ Invalid assignment to local 'x'
    ·
 30 │     fun t5<T>(cond: bool, x: T, y: T): (T, T) {
    │                           - The local might contain a resource value due to this assignment. The resource must be used before you assign to this local again
    │

error: 

    ┌── tests/move_check/locals/assign_partial_resource.move:31:25 ───
    │
 32 │         (x, y)
    │             ^ Invalid usage of local 'y'
    ·
 31 │         if (cond) { x = y };
    │                         - The local might not have a value due to this position. The local must be assigned a value before being used
    │

